--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -1,156 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXToggleButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0"
-            xmlns="http://javafx.com/javafx/8.0.141"
-            fx:controller="edu.wpi.cs3733d18.teamS.controller.ModifyMapController">
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.ModifyMapController">
     <top>
-        <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;"
-                    BorderPane.alignment="CENTER">
+        <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
             <left>
-                <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30"
-                       BorderPane.alignment="CENTER">
+                <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
-                        <Insets left="10.0"/>
+                        <Insets left="10.0" />
                     </BorderPane.margin>
                 </Label>
             </left>
             <right>
                 <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Text fx:id="user_name" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
-                              style="-fx-font-size: 18;" text=""/>
-                        <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick"
-                                   style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%back"/>
+                        <Text fx:id="user_name" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 18;" text="" />
+                        <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%back" />
                     </children>
                     <padding>
-                        <Insets right="10.0"/>
+                        <Insets right="10.0" />
                     </padding>
                 </HBox>
             </right>
         </BorderPane>
     </top>
     <center>
-        <ScrollPane fx:id="scroll_pane" pannable="true" prefHeight="690.0" prefWidth="900.0"
-                    BorderPane.alignment="CENTER">
+        <ScrollPane fx:id="scroll_pane" pannable="true" prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
             <content>
                 <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick">
                     <children>
-                        <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true"
-                                   preserveRatio="true">
+                        <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@images/2dMaps/01_thefirstfloor.png"/>
+                                <Image url="@images/2dMaps/01_thefirstfloor.png" />
                             </image>
                         </ImageView>
                     </children>
                 </AnchorPane>
             </content>
             <BorderPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </BorderPane.margin>
         </ScrollPane>
     </center>
     <right>
         <VBox alignment="TOP_CENTER" prefHeight="740.0" prefWidth="242.0" spacing="30.0" BorderPane.alignment="CENTER">
             <children>
-                <JFXComboBox fx:id="location_or_path" focusColor="#4863a0" onAction="#onChooseAction"
-                             promptText="%location_or_path" style="-fx-font-size: 23;"/>
+                <JFXComboBox fx:id="location_or_path" focusColor="#4863a0" onAction="#onChooseAction" promptText="%location_or_path" style="-fx-font-size: 23;" />
                 <StackPane prefHeight="150.0" prefWidth="200.0">
                     <children>
-                        <VBox fx:id="add_node_box" alignment="CENTER" prefHeight="389.0" prefWidth="242.0"
-                              spacing="15.0" visible="false">
+                        <VBox fx:id="add_node_box" alignment="CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" visible="false">
                             <children>
-                                <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0"
-                                              promptText="%building">
+                                <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building">
                                     <font>
-                                        <Font size="23.0"/>
+                                        <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXComboBox fx:id="loc_type" focusColor="#4863a0" promptText="%location_type"
-                                             style="-fx-font-size: 23;"/>
-                                <JFXTextField fx:id="long_name" alignment="CENTER" focusColor="#4863a0"
-                                              promptText="%long_name">
+                                <JFXComboBox fx:id="loc_type" focusColor="#4863a0" promptText="%location_type" style="-fx-font-size: 23;" />
+                                <JFXTextField fx:id="long_name" alignment="CENTER" focusColor="#4863a0" promptText="%long_name">
                                     <font>
-                                        <Font size="23.0"/>
+                                        <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXTextField fx:id="short_name" alignment="CENTER" focusColor="#4863a0"
-                                              promptText="%short_name">
+                                <JFXTextField fx:id="short_name" alignment="CENTER" focusColor="#4863a0" promptText="%short_name">
                                     <font>
-                                        <Font size="23.0"/>
+                                        <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXButton fx:id="add_loc" buttonType="RAISED" onAction="#onAddLocClick"
-                                           style="-fx-background-color: #B7B8B6;" text="%add_location">
+                                <JFXButton fx:id="add_loc" buttonType="RAISED" onAction="#onAddLocClick" style="-fx-background-color: #B7B8B6;" text="%add_location">
                                     <font>
-                                        <Font size="23.0"/>
+                                        <Font size="23.0" />
                                     </font>
                                 </JFXButton>
-                                <JFXButton fx:id="add_loc_cancel" buttonType="RAISED" onAction="#onAddLocCancelClick"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge"
-                                           visible="false"/>
-                                <Label fx:id="add_loc_fail" textFill="RED"/>
+                                <JFXButton fx:id="add_loc_cancel" buttonType="RAISED" onAction="#onAddLocCancelClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" visible="false" />
+                                <Label fx:id="add_loc_fail" textFill="RED" />
                             </children>
                         </VBox>
                         <VBox fx:id="add_edge_box" alignment="CENTER" spacing="20.0" visible="false">
                             <children>
-                                <JFXTextField fx:id="location_one" alignment="CENTER" editable="false"
-                                              focusColor="#4863a0" promptText="%location_one">
+                                <JFXTextField fx:id="location_one" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one">
                                     <font>
-                                        <Font size="23.0"/>
+                                        <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXTextField fx:id="location_two" alignment="CENTER" editable="false"
-                                              focusColor="#4863a0" promptText="%location_two">
+                                <JFXTextField fx:id="location_two" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_two">
                                     <font>
-                                        <Font size="23.0"/>
+                                        <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXButton fx:id="add_edge" buttonType="RAISED" onAction="#onAddEdgeClick"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%add_edge"/>
-                                <JFXButton fx:id="cancel_edge" buttonType="RAISED" onAction="#onCancelEdgeClick"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;"
-                                           text="%cancel_edge"/>
+                                <JFXButton fx:id="add_edge" buttonType="RAISED" onAction="#onAddEdgeClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%add_edge" />
+                                <JFXButton fx:id="cancel_edge" buttonType="RAISED" onAction="#onCancelEdgeClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" />
                             </children>
                         </VBox>
                         <VBox fx:id="delete_loc_box" alignment="CENTER" spacing="20.0" visible="false">
                             <children>
-                                <JFXTextField fx:id="location_to_delete" alignment="CENTER" editable="false"
-                                              focusColor="#4863a0" promptText="%location_one">
+                                <JFXTextField fx:id="location_to_delete" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one">
                                     <font>
-                                        <Font size="23.0"/>
+                                        <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXButton fx:id="delete_loc" buttonType="RAISED" onAction="#onDeleteLocClick"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;"
-                                           text="%delete_location"/>
-                                <JFXButton fx:id="cancel_delete" buttonType="RAISED" onAction="#onDeleteLocCancelClick"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;"
-                                           text="%cancel_edge"/>
+                                <JFXButton fx:id="delete_loc" buttonType="RAISED" onAction="#onDeleteLocClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%delete_location" />
+                                <JFXButton fx:id="cancel_delete" buttonType="RAISED" onAction="#onDeleteLocCancelClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" />
                             </children>
                         </VBox>
-                        <JFXTextField fx:id="kiosk_location_name" alignment="CENTER" focusColor="#4863a0"
-                                      promptText="%location" visible="false">
+                  <VBox fx:id="delete_edge_box" alignment="CENTER" spacing="20.0" visible="false">
+                     <children>
+                        <JFXToggleButton text="Mute">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                        </JFXToggleButton>
+                        <JFXButton fx:id="delete_edge" buttonType="RAISED" onAction="#onDeleteEdge" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Delete Edges" />
+                        <JFXButton fx:id="cancel_delete_edge" buttonType="RAISED" onAction="#onCancelDeleteEdge" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Cancel" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="modify_loc_box" alignment="CENTER" spacing="20.0" visible="false">
+                     <children>
+                        <JFXButton fx:id="cancel_move" buttonType="RAISED" onAction="#onCancelMove" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Cancel" />
+                     </children>
+                  </VBox>
+                        <JFXTextField fx:id="kiosk_location_name" alignment="CENTER" focusColor="#4863a0" promptText="%location" visible="false">
                             <font>
-                                <Font size="23.0"/>
+                                <Font size="23.0" />
                             </font>
                         </JFXTextField>
                     </children>
                 </StackPane>
-                <JFXComboBox fx:id="choose_floor" focusColor="#4863a0" onAction="#onChooseFloorChange"
-                             promptText="%choose_floor" style="-fx-font-size: 23;"/>
-                <JFXButton fx:id="confirm_3d" buttonType="RAISED" onAction="#onConfirm3dClick"
-                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%confirm_coord"
-                           visible="false"/>
+                <JFXComboBox fx:id="choose_floor" focusColor="#4863a0" onAction="#onChooseFloorChange" promptText="%choose_floor" style="-fx-font-size: 23;" />
+                <JFXButton fx:id="confirm_3d" buttonType="RAISED" onAction="#onConfirm3dClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%confirm_coord" visible="false" />
             </children>
             <BorderPane.margin>
-                <Insets left="10.0" right="10.0" top="10.0"/>
+                <Insets left="10.0" right="10.0" top="10.0" />
             </BorderPane.margin>
         </VBox>
     </right>
@@ -159,31 +154,28 @@
             <children>
                 <ScrollPane fx:id="scroll_pane" pannable="true" prefHeight="690.0" prefWidth="900.0">
                     <content>
-                        <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick">
+                        <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick" onMouseDragged="#onNodeDrag">
                             <children>
-                                <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true"
-                                           preserveRatio="true">
+                                <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@images/01_thefirstfloor.png"/>
+                                        <Image url="@images/01_thefirstfloor.png" />
                                     </image>
                                 </ImageView>
                             </children>
                         </AnchorPane>
                     </content>
                 </ScrollPane>
-                <ImageView fx:id="zoom_out" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#onZoomOut"
-                           pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
+                <ImageView fx:id="zoom_out" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#onZoomOut" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
                     <image>
-                        <Image url="@images/minus.png"/>
+                        <Image url="@images/minus.png" />
                     </image>
                 </ImageView>
-                <ImageView fx:id="zoom_in" fitHeight="40.0" fitWidth="40.0" layoutX="40.0" onMouseClicked="#onZoomIn"
-                           pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
+                <ImageView fx:id="zoom_in" fitHeight="40.0" fitWidth="40.0" layoutX="40.0" onMouseClicked="#onZoomIn" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
                     <StackPane.margin>
-                        <Insets left="40.0"/>
+                        <Insets left="40.0" />
                     </StackPane.margin>
                     <image>
-                        <Image url="@images/plus.png"/>
+                        <Image url="@images/plus.png" />
                     </image>
                 </ImageView>
             </children>
