--- a/src/main/resources/Report.fxml
+++ b/src/main/resources/Report.fxml
@@ -14,31 +14,31 @@
     <right>
         <VBox BorderPane.alignment="CENTER">
             <children>
-                <JFXDatePicker fx:id="start_date_picker" onAction="#onGoButton" promptText="%start_date"/>
-                <JFXTimePicker fx:id="start_time_picker" onAction="#onGoButton" promptText="%start_time"/>
-                <JFXDatePicker fx:id="end_date_picker" onAction="#onGoButton" promptText="%end_date"/>
-                <JFXTimePicker fx:id="end_time_picker" onAction="#onGoButton" promptText="%end_time"/>
+                <JFXDatePicker fx:id="start_date_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%start_date" />
+                <JFXTimePicker fx:id="start_time_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%start_time" />
+                <JFXDatePicker fx:id="end_date_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%end_date" />
+                <JFXTimePicker fx:id="end_time_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%end_time" />
                 <HBox alignment="CENTER">
                     <children>
-                        <Label text="%table"/>
-                        <JFXToggleButton fx:id="chart_toggle" onAction="#onToggle" text="%chart"/>
+                        <Label text="%table" />
+                        <JFXToggleButton fx:id="chart_toggle" onAction="#onToggle" text="%chart" toggleColor="#91a1c6" toggleLineColor="#4863a0" />
                     </children>
                 </HBox>
             </children>
         </VBox>
     </right>
     <bottom>
-        <HBox BorderPane.alignment="CENTER"/>
+        <HBox BorderPane.alignment="CENTER" />
     </bottom>
     <left>
         <VBox BorderPane.alignment="CENTER">
             <children>
-                <JFXComboBox fx:id="report_type_menu" onAction="#onGoButton" promptText="%report_types"/>
-                <JFXListView fx:id="service_type_list" VBox.vgrow="ALWAYS"/>
+                <JFXComboBox fx:id="report_type_menu" onAction="#onGoButton" promptText="%report_types" />
+                <JFXListView fx:id="service_type_list" VBox.vgrow="ALWAYS" />
             </children>
         </VBox>
     </left>
     <center>
-        <Label fx:id="instructions" text="%report_instructions" BorderPane.alignment="CENTER"/>
+        <Label fx:id="instructions" text="%report_instructions" BorderPane.alignment="CENTER" />
     </center>
 </BorderPane>
