--- a/src/main/resources/UserReport.fxml
+++ b/src/main/resources/UserReport.fxml
@@ -10,19 +10,18 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.ReportsController">
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.UserReportsController">
     <right>
         <VBox BorderPane.alignment="CENTER">
             <children>
-
-                <JFXDatePicker fx:id="start_date_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%start_date" />
-                <JFXTimePicker fx:id="start_time_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%start_time" />
-                <JFXDatePicker fx:id="end_date_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%end_date" />
-                <JFXTimePicker fx:id="end_time_picker" defaultColor="#4863a0" onAction="#onGoButton" promptText="%end_time" />
+                <JFXDatePicker fx:id="start_date_picker" onAction="#onGoButton" promptText="%start_date" />
+                <JFXTimePicker fx:id="start_time_picker" onAction="#onGoButton" promptText="%start_time" />
+                <JFXDatePicker fx:id="end_date_picker" onAction="#onGoButton" promptText="%end_date" />
+                <JFXTimePicker fx:id="end_time_picker" onAction="#onGoButton" promptText="%end_time" />
                 <HBox alignment="CENTER">
                     <children>
                         <Label text="%table" />
-                        <JFXToggleButton fx:id="chart_toggle" onAction="#onToggle" text="%chart" toggleColor="#91a1c6" toggleLineColor="#4863a0" />
+                        <JFXToggleButton fx:id="chart_toggle" onAction="#onToggle" text="%chart" />
                     </children>
                 </HBox>
             </children>
@@ -35,7 +34,7 @@
         <VBox BorderPane.alignment="CENTER">
             <children>
                 <JFXComboBox fx:id="report_type_menu" onAction="#onGoButton" promptText="%report_types" />
-                <JFXListView fx:id="service_type_list" VBox.vgrow="ALWAYS" />
+                <JFXListView fx:id="user_list" VBox.vgrow="ALWAYS" />
             </children>
         </VBox>
     </left>
