--- a/src/main/resources/CompleteRequest.fxml
+++ b/src/main/resources/CompleteRequest.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="edu.wpi.cs3733d18.teamS.controller.ServiceAreaController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.ServiceAreaController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -19,7 +19,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="220.0" prefWidth="210.0" spacing="20.0">
+      <VBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="210.0" spacing="20.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%to_be_completed_label">
                <font>
@@ -43,6 +43,11 @@
                </font>
             </TextArea>
             <JFXButton fx:id="mark_completed_btn" buttonType="RAISED" onAction="#markComplete" style="-fx-background-color: #B7B8B6;" text="%mark_completed_button">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="pathfind_button" buttonType="RAISED" onAction="#doPathFind" style="-fx-background-color: #B7B8B6;" text="%pathfind_button">
                <font>
                   <Font size="23.0" />
                </font>
