--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.gluonhq.charm.glisten.control.ExpansionPanel?>
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXToggleButton?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0"
-            xmlns="http://javafx.com/javafx/8.0.141"
-            fx:controller="edu.wpi.cs3733d18.teamS.controller.HomePageController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.HomePageController">
     <top>
         <ExpansionPanel fx:id="exp_panel" prefWidth="1200.0" BorderPane.alignment="CENTER">
             <expandedContent>
                 <BorderPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
                     <left>
-                        <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;"
-                               BorderPane.alignment="CENTER">
+                        <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" BorderPane.alignment="CENTER">
                             <BorderPane.margin>
-                                <Insets left="10.0"/>
+                                <Insets left="10.0" />
                             </BorderPane.margin>
                         </Label>
                     </left>
                     <right>
                         <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Label fx:id="wrong_credentials" prefHeight="17.0" prefWidth="210.0" textFill="WHITE"/>
-                                <TextField fx:id="username" alignment="CENTER" prefHeight="19.0" prefWidth="116.0"
-                                           promptText="%username"
-                                           style="-fx-background-color: #ffffff; -fx-font-size: 18;"/>
-                                <PasswordField fx:id="password" alignment="CENTER" layoutX="1000.0" prefWidth="116.0"
-                                               promptText="%password"
-                                               style="-fx-background-color: #ffffff; -fx-font-size: 18;"/>
-                                <JFXButton fx:id="login_btn" buttonType="RAISED" contentDisplay="CENTER"
-                                           onAction="#onLoginClick" ripplerFill="BLACK"
-                                           style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%login"/>
+                                <Label fx:id="wrong_credentials" prefHeight="17.0" prefWidth="210.0" textFill="WHITE" />
+                                <TextField fx:id="username" alignment="CENTER" prefHeight="19.0" prefWidth="116.0" promptText="%username" style="-fx-background-color: #ffffff; -fx-font-size: 18;" />
+                                <PasswordField fx:id="password" alignment="CENTER" layoutX="1000.0" prefWidth="116.0" promptText="%password" style="-fx-background-color: #ffffff; -fx-font-size: 18;" />
+                                <JFXButton fx:id="login_btn" buttonType="RAISED" contentDisplay="CENTER" onAction="#onLoginClick" ripplerFill="BLACK" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%login" />
                             </children>
                             <BorderPane.margin>
-                                <Insets right="40.0"/>
+                                <Insets right="40.0" />
                             </BorderPane.margin>
                         </HBox>
                     </right>
@@ -47,10 +47,9 @@
             <collapsedContent>
                 <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
                     <left>
-                        <Label fx:id="time2" style="-fx-text-fill: #ffffff; -fx-font-size: 23;"
-                               BorderPane.alignment="CENTER">
+                        <Label fx:id="time2" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" BorderPane.alignment="CENTER">
                             <BorderPane.margin>
-                                <Insets left="10.0"/>
+                                <Insets left="10.0" />
                             </BorderPane.margin>
                         </Label>
                     </left>
@@ -61,64 +60,53 @@
     <center>
         <StackPane fx:id="stack_pane" prefHeight="650.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
             <children>
-                <ImageView fitHeight="669.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true"
-                           StackPane.alignment="CENTER">
+                <ImageView fitHeight="669.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
                     <image>
-                        <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png"/>
+                        <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
                     </image>
                     <StackPane.margin>
-                        <Insets top="30.0"/>
+                        <Insets top="30.0" />
                     </StackPane.margin>
                 </ImageView>
                 <VBox alignment="TOP_CENTER" prefHeight="570.0" prefWidth="1200.0" spacing="50.0">
                     <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="%find_nearest" textAlignment="CENTER">
                             <font>
-                                <Font size="23.0"/>
+                                <Font size="23.0" />
                             </font>
                             <VBox.margin>
-                                <Insets/>
+                                <Insets />
                             </VBox.margin>
                         </Text>
                         <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="200.0" spacing="40.0">
                             <children>
-                                <JFXButton fx:id="INFO" buttonType="RAISED" onAction="#onQuickClick"
-                                           style="-fx-background-color: #B7B8B6; -fx-font-size: 23;"
-                                           text="%information">
+                                <JFXButton fx:id="INFO" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%information">
                                     <font>
-                                        <Font size="16.0"/>
+                                        <Font size="16.0" />
                                     </font>
                                 </JFXButton>
-                                <JFXButton fx:id="REST" buttonType="RAISED" onAction="#onQuickClick"
-                                           style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%restroom">
+                                <JFXButton fx:id="REST" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%restroom">
                                     <font>
-                                        <Font size="16.0"/>
+                                        <Font size="16.0" />
                                     </font>
                                 </JFXButton>
-                                <JFXButton fx:id="DEPT" buttonType="RAISED" onAction="#onQuickClick"
-                                           style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%department">
+                                <JFXButton fx:id="DEPT" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%department">
                                     <font>
-                                        <Font size="16.0"/>
+                                        <Font size="16.0" />
                                     </font>
                                 </JFXButton>
                             </children>
                             <VBox.margin>
-                                <Insets top="-40.0"/>
+                                <Insets top="-40.0" />
                             </VBox.margin>
                         </HBox>
-                        <JFXComboBox fx:id="combobox_start" editable="true" focusColor="#4863a0" labelFloat="true"
-                                     onKeyReleased="#onKeyReleasedComboBox" promptText="%start_location"
-                                     style="-fx-font-size: 23;"/>
-                        <JFXComboBox fx:id="combobox_end" editable="true" focusColor="#4863a0" labelFloat="true"
-                                     onKeyReleased="#onKeyReleasedComboBox" promptText="%end_location"
-                                     style="-fx-font-size: 23; -jfx-focus-color-font-size: 12;"/>
-                        <JFXToggleButton fx:id="stairs_toggle" style="-fx-font-size: 23;" text="%stairs"
-                                         toggleColor="#b7b8b6" toggleLineColor="#4863a0"/>
-                        <JFXButton fx:id="pathfind" buttonType="RAISED" onAction="#onPathfindClick"
-                                   style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%directions_button"/>
+                        <JFXComboBox fx:id="combobox_start" editable="true" focusColor="#4863a0" labelFloat="true" onKeyReleased="#onKeyReleasedComboBox" promptText="%start_location" style="-fx-font-size: 23;" />
+                        <JFXComboBox fx:id="combobox_end" editable="true" focusColor="#4863a0" labelFloat="true" onKeyReleased="#onKeyReleasedComboBox" promptText="%end_location" style="-fx-font-size: 23; -jfx-focus-color-font-size: 12;" />
+                        <JFXToggleButton fx:id="stairs_toggle" style="-fx-font-size: 23;" text="%stairs" toggleColor="#b7b8b6" toggleLineColor="#4863a0" />
+                        <JFXButton fx:id="pathfind" buttonType="RAISED" onAction="#onPathfindClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%directions_button" />
                     </children>
                     <StackPane.margin>
-                        <Insets top="40.0"/>
+                        <Insets top="40.0" />
                     </StackPane.margin>
                 </VBox>
             </children>
@@ -127,13 +115,12 @@
     <bottom>
         <HBox alignment="BOTTOM_LEFT" prefHeight="50.0" prefWidth="273.0" spacing="20.0" BorderPane.alignment="CENTER">
             <children>
-                <JFXComboBox fx:id="language_selector" focusColor="#4863a0" labelFloat="true" promptText="%language"
-                             style="-fx-font-size: 18; -fx-background-color: #ffffff;"/>
-                <JFXButton buttonType="RAISED" onAction="#onLanguageChange"
-                           style="-fx-background-color: #B7B8B6; -fx-font-size: 18;" text="%confirm"/>
+                <JFXComboBox fx:id="language_selector" focusColor="#4863a0" labelFloat="true" promptText="%language" style="-fx-font-size: 18; -fx-background-color: #ffffff;" />
+                <JFXButton buttonType="RAISED" onAction="#onLanguageChange" style="-fx-background-color: #B7B8B6; -fx-font-size: 18;" text="%confirm" />
+            <JFXButton fx:id="about" onAction="#onAboutClick" text="About" />
             </children>
             <padding>
-                <Insets bottom="10.0" left="10.0"/>
+                <Insets bottom="10.0" left="10.0" />
             </padding>
         </HBox>
     </bottom>
